--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "version": 2,
+  "buildCommand": "npx vite build",
+  "outputDirectory": "dist/public",
+  "framework": null,
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/api/index.js" 
-    }
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
